# HeartDisease

./: README.md
Daiaia/: pyproject.toml
Daiaia/Card_Learn/: Teste_Dados.py  Teste_previsão.py  main.py
Daiaia/Card_Learn/templates/: index.html  prediction_results.html
Daiaia/Testes_Precisão/: Classificação.py  Regressão.py
HeartPredict/CardioLearn/: main.py
HeartPredict/CardioLearn/templates/: index.html  prediction_results.html
HeartPredict/Testes_Precisão/: Classificação.py  Regressão.py  __init__.py
HeartPredict/tests/: LunaHeart.py  test_app.py
