[tool.poetry]
name = "cardlearn"
version = "0.1.0"
description = ""
authors = ["Mateus Lucas <mateuslucas1879@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flask = "^3.0.3"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
numpy = "^2.0.0"
traceback2 = "^1.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
